tests/paczka1/small_fuzzy/40327531.err
Error in line 7: ecZvf S722 12,6
Error in line 15: Tg74mo5rs S857 -1,4
